--- a/RetroProgress.xcodeproj/xcshareddata/xcschemes/SwiftPackage-watchOS.xcscheme
+++ b/RetroProgress.xcodeproj/xcshareddata/xcschemes/SwiftPackage-watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D284B1171F79039F00D94AF3"
-               BuildableName = "RetroProgress_watchOS.framework"
+               BuildableName = "RetroProgress.framework"
                BlueprintName = "RetroProgress-watchOS"
                ReferencedContainer = "container:RetroProgress.xcodeproj">
             </BuildableReference>
@@ -48,7 +48,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D284B1171F79039F00D94AF3"
-            BuildableName = "RetroProgress_watchOS.framework"
+            BuildableName = "RetroProgress.framework"
             BlueprintName = "RetroProgress-watchOS"
             ReferencedContainer = "container:RetroProgress.xcodeproj">
          </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D284B1171F79039F00D94AF3"
-            BuildableName = "RetroProgress_watchOS.framework"
+            BuildableName = "RetroProgress.framework"
             BlueprintName = "RetroProgress-watchOS"
             ReferencedContainer = "container:RetroProgress.xcodeproj">
          </BuildableReference>
