--- a/RetroProgress.xcodeproj/xcshareddata/xcschemes/RetroProgress-tvOS.xcscheme
+++ b/RetroProgress.xcodeproj/xcshareddata/xcschemes/RetroProgress-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "0920"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "D5C6293F1C3A7FAA007F7B7C"
+               BlueprintIdentifier = "D284B0FB1F79038B00D94AF3"
                BuildableName = "RetroProgress.framework"
-               BlueprintName = "RetroProgress-macOS"
+               BlueprintName = "RetroProgress-tvOS"
                ReferencedContainer = "container:RetroProgress.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,7 +29,26 @@
       language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D284B1031F79038B00D94AF3"
+               BuildableName = "RetroProgress-tvOS-Tests.xctest"
+               BlueprintName = "RetroProgress-tvOS-Tests"
+               ReferencedContainer = "container:RetroProgress.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D284B0FB1F79038B00D94AF3"
+            BuildableName = "RetroProgress.framework"
+            BlueprintName = "RetroProgress-tvOS"
+            ReferencedContainer = "container:RetroProgress.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -47,9 +66,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D5C6293F1C3A7FAA007F7B7C"
+            BlueprintIdentifier = "D284B0FB1F79038B00D94AF3"
             BuildableName = "RetroProgress.framework"
-            BlueprintName = "RetroProgress-macOS"
+            BlueprintName = "RetroProgress-tvOS"
             ReferencedContainer = "container:RetroProgress.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,9 +84,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "D5C6293F1C3A7FAA007F7B7C"
+            BlueprintIdentifier = "D284B0FB1F79038B00D94AF3"
             BuildableName = "RetroProgress.framework"
-            BlueprintName = "RetroProgress-macOS"
+            BlueprintName = "RetroProgress-tvOS"
             ReferencedContainer = "container:RetroProgress.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
