--- a/Info/Info-macOS.plist
+++ b/Info/Info-macOS.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Hyper Interaktiv AS. All rights reserved.</string>
+	<string>Copyright © 2018 Vadym Markov. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
